--- a/activestate.windows.yaml
+++ b/activestate.windows.yaml
@@ -2,6 +2,9 @@ constants:
   - name: BUILD_TARGET
     if: eq .OS.Name "Windows"
     value: ./build/state.exe
+  - name: BUILD_DAEMON_TARGET
+    if: eq .OS.Name "Windows"
+    value: ./build/state-service.exe
   - name: BUILD_TARGET_32BIT
     if: eq .OS.Name "Windows"
     value: ./build/state32.exe
