--- a/activestate.windows.yaml
+++ b/activestate.windows.yaml
@@ -5,6 +5,12 @@ constants:
   - name: BUILD_TARGET_32BIT
     if: eq .OS.Name "Windows"
     value: ./build/state32.exe
+  - name: SYSTRAY_BUILD_TARGET
+    if: eq .OS.Name "Windows"
+    value: ./build/state-tray.exe
+  - name: SYSTRAY_BUILDFLAGS
+    if: eq .OS.Name "Windows"
+    value: -ldflags="-s -w -H=windowsgui"
 scripts:
   - name: build-install-scripts
     language: bash
