--- a/activestate.generators.yaml
+++ b/activestate.generators.yaml
@@ -85,4 +85,4 @@ scripts:
     value: |
       export PATH="$PATH:$(go env GOPATH)/bin"
       cd internal/idl
-      protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative svc.proto
+      protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=require_unimplemented_servers=false:. --go-grpc_opt=paths=source_relative svc.proto
