--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -91,7 +91,7 @@ run: |
 name: "Unit Tests"
 shell: bash
 run: |
-  go test `go list ./... | grep -v api | grep -v integration | grep -v expect`
+  go test `go list ./... | grep -v api | grep -v integration | grep -v expect | grep -v state-tray`
 #@ end
 ---
 #@ def steps_inttestcrit():
